Fixes toggling and namespacing bugs with nuke autocomplete.

--- a/beta/app/webroot/css/style.css
+++ b/beta/app/webroot/css/style.css
@@ -509,7 +509,7 @@ a.collapsebutton:hover {
 }
 
 .manually_assigned {
-	background-color: rgba(160, 0, 0, 0.6) !important;
+	color: rgba(0, 0, 0, 0.4) !important;
 }
 
 /* ======= Planning Step 3 ====== */
